--- a/gui/main_window.ui
+++ b/gui/main_window.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>735</width>
-    <height>535</height>
+    <height>368</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -558,11 +558,17 @@ background-color: #a6aaaf;
           </layout>
          </widget>
          <widget class="QWidget" name="detect_page">
-          <layout class="QGridLayout" name="gridLayout_11">
-           <item row="0" column="0">
+          <layout class="QVBoxLayout" name="verticalLayout_4">
+           <item>
             <layout class="QGridLayout" name="gridLayout_10">
              <item row="1" column="0">
               <widget class="QLabel" name="label_3">
+               <property name="maximumSize">
+                <size>
+                 <width>16777215</width>
+                 <height>40</height>
+                </size>
+               </property>
                <property name="font">
                 <font>
                  <family>맑은 고딕</family>
@@ -572,14 +578,14 @@ background-color: #a6aaaf;
                 </font>
                </property>
                <property name="text">
-                <string>검출</string>
+                <string>불량 검출</string>
                </property>
                <property name="alignment">
                 <set>Qt::AlignCenter</set>
                </property>
               </widget>
              </item>
-             <item row="3" column="0">
+             <item row="2" column="0">
               <widget class="QWidget" name="anomaly_detect_widget" native="true">
                <property name="styleSheet">
                 <string notr="true">#anomaly_detect_widget{
@@ -587,136 +593,8 @@ background-color: #a6aaaf;
 	border-radius: 5px;
 }</string>
                </property>
-               <layout class="QGridLayout" name="gridLayout_9">
-                <item row="2" column="0">
-                 <spacer name="verticalSpacer_3">
-                  <property name="orientation">
-                   <enum>Qt::Vertical</enum>
-                  </property>
-                  <property name="sizeHint" stdset="0">
-                   <size>
-                    <width>20</width>
-                    <height>147</height>
-                   </size>
-                  </property>
-                 </spacer>
-                </item>
-                <item row="3" column="0">
-                 <widget class="QPushButton" name="anomaly_detect_start_button">
-                  <property name="font">
-                   <font>
-                    <family>맑은 고딕</family>
-                    <weight>75</weight>
-                    <bold>true</bold>
-                   </font>
-                  </property>
-                  <property name="styleSheet">
-                   <string notr="true">border: 4px solid#a6aaaf;
-border-radius: 5px;
-padding: 1px 5px;
-background-color: #a6aaaf;</string>
-                  </property>
-                  <property name="text">
-                   <string>검출 시작</string>
-                  </property>
-                 </widget>
-                </item>
-                <item row="0" column="0">
-                 <widget class="QLabel" name="label_5">
-                  <property name="font">
-                   <font>
-                    <family>맑은 고딕</family>
-                    <pointsize>11</pointsize>
-                    <weight>75</weight>
-                    <bold>true</bold>
-                   </font>
-                  </property>
-                  <property name="text">
-                   <string>이상 검출</string>
-                  </property>
-                  <property name="alignment">
-                   <set>Qt::AlignCenter</set>
-                  </property>
-                 </widget>
-                </item>
-               </layout>
-              </widget>
-             </item>
-             <item row="2" column="0">
-              <widget class="QWidget" name="yolo_detect_widget" native="true">
-               <property name="styleSheet">
-                <string notr="true">#yolo_detect_widget{
-	border: 2px solid#a6aaaf;
-	border-radius: 5px;
-}
-</string>
-               </property>
-               <layout class="QGridLayout" name="gridLayout_8">
-                <item row="0" column="0">
-                 <widget class="QLabel" name="label_4">
-                  <property name="font">
-                   <font>
-                    <family>맑은 고딕</family>
-                    <pointsize>11</pointsize>
-                    <weight>75</weight>
-                    <bold>true</bold>
-                   </font>
-                  </property>
-                  <property name="text">
-                   <string>yolo 검출</string>
-                  </property>
-                  <property name="alignment">
-                   <set>Qt::AlignCenter</set>
-                  </property>
-                 </widget>
-                </item>
-                <item row="4" column="0">
-                 <layout class="QHBoxLayout" name="horizontalLayout_2">
-                  <item>
-                   <widget class="QPushButton" name="detect_image_button">
-                    <property name="font">
-                     <font>
-                      <family>맑은 고딕</family>
-                      <weight>75</weight>
-                      <bold>true</bold>
-                     </font>
-                    </property>
-                    <property name="styleSheet">
-                     <string notr="true">border: 4px solid#a6aaaf;
-border-radius: 5px;
-padding: 1px 5px;
-background-color: #a6aaaf;
-</string>
-                    </property>
-                    <property name="text">
-                     <string>이미지</string>
-                    </property>
-                   </widget>
-                  </item>
-                  <item>
-                   <widget class="QPushButton" name="detect_video_button">
-                    <property name="font">
-                     <font>
-                      <family>맑은 고딕</family>
-                      <weight>75</weight>
-                      <bold>true</bold>
-                     </font>
-                    </property>
-                    <property name="styleSheet">
-                     <string notr="true">border: 4px solid#a6aaaf;
-border-radius: 5px;
-padding: 1px 5px;
-background-color: #a6aaaf;
-</string>
-                    </property>
-                    <property name="text">
-                     <string>실시간 영상</string>
-                    </property>
-                   </widget>
-                  </item>
-                 </layout>
-                </item>
-                <item row="2" column="0" alignment="Qt::AlignHCenter">
+               <layout class="QVBoxLayout" name="verticalLayout_3">
+                <item alignment="Qt::AlignHCenter">
                  <widget class="QComboBox" name="comboBox">
                   <property name="maximumSize">
                    <size>
@@ -727,6 +605,52 @@ background-color: #a6aaaf;
                  </widget>
                 </item>
                </layout>
+              </widget>
+             </item>
+            </layout>
+           </item>
+           <item>
+            <layout class="QHBoxLayout" name="horizontalLayout_2">
+             <item>
+              <widget class="QPushButton" name="detect_image_button">
+               <property name="font">
+                <font>
+                 <family>맑은 고딕</family>
+                 <weight>75</weight>
+                 <bold>true</bold>
+                </font>
+               </property>
+               <property name="styleSheet">
+                <string notr="true">border: 4px solid#a6aaaf;
+border-radius: 5px;
+padding: 1px 5px;
+background-color: #a6aaaf;
+</string>
+               </property>
+               <property name="text">
+                <string>이미지</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QPushButton" name="detect_video_button">
+               <property name="font">
+                <font>
+                 <family>맑은 고딕</family>
+                 <weight>75</weight>
+                 <bold>true</bold>
+                </font>
+               </property>
+               <property name="styleSheet">
+                <string notr="true">border: 4px solid#a6aaaf;
+border-radius: 5px;
+padding: 1px 5px;
+background-color: #a6aaaf;
+</string>
+               </property>
+               <property name="text">
+                <string>실시간 영상</string>
+               </property>
               </widget>
              </item>
             </layout>
